--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
     <script src="js/scripts.js" type="text/javascript"></script>
   </head>
   <body>
-    <div class="random">
-      <button type="submit" name="button" class="btn">Go!</button>
-      <p id='result'> </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          Player 1
+          <button type="button" name="button" class="btn">ROLL DICE</button>
+        </div>
+        <div class="col-md-4">
+          Dice
+          <p id="result">
+
+          </p>
+        </div>
+        <div class="col-md-4">
+          Player 2
+          <button type="button" name="button" class="btn">ROLL DICE</button>
+        </div>
+
+      </div>
+
     </div>
   </body>
 </html>
+
+<!-- <div class="random">
+  <button type="submit" name="button" class="btn">Go!</button>
+  <p id='result'> </p>
+</div> -->
