--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          Player 1
+        <div class="col-md-4" id="p1">
+          <h1 id="player1"></h1>
           <button type="button" name="button" class="btn">ROLL DICE</button>
         </div>
         <div class="col-md-4">
           Dice
-          <p id="result">
-
-          </p>
+          <p id="result"></p>
+          <button type="button" name="button" class="btn">SWITCH</button>
         </div>
-        <div class="col-md-4">
-          Player 2
+        <div class="col-md-4" id="p2">
+        <h2 id="Player2"></h2>
           <button type="button" name="button" class="btn">ROLL DICE</button>
         </div>
 
