add button to display roll score

--- a/index.html
+++ b/index.html
@@ -12,16 +12,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4" id="p1">
-          <h1 id="player1"></h1>
+          <h1 id="player-one"></h1>
+          <div class="display-round-score-one">
+
+          </div>
+          <div class="display-total-score-one">
+
+          </div>
           <button type="button" name="button" class="btn">ROLL DICE</button>
         </div>
         <div class="col-md-4">
           Dice
           <p id="result"></p>
-          <button type="button" name="button" class="btn">SWITCH</button>
+          <button type="button" name="button" class="switch">SWITCH</button>
         </div>
         <div class="col-md-4" id="p2">
-        <h2 id="Player2"></h2>
+        <h2 id="player-two"></h2>
+        <div class="display-round-score-two">
+
+        </div>
+        <div class="display-total-score-two">
+
+        </div>
           <button type="button" name="button" class="btn">ROLL DICE</button>
         </div>
 
