--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Pig Dice</title>
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
-    <script src="js/scripts.js" type="text/javascript"></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4" id="p1">
-          <h1 id="player-one"></h1>
-          <div class="display-round-score-one">
+<head>
+  <meta charset="utf-8">
+  <title>Pig Dice</title>
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+  <script src="js/scripts.js" type="text/javascript"></script>
+</head>
+<body>
+  <div class="container">
+    <div class="row">
 
-          </div>
-          <div class="display-total-score-one">
-
-          </div>
-          <button type="button" name="button" class="btn">ROLL DICE</button>
+      <div class="col-md-4" id="p1">
+        <h1 id="player-one"></h1>
+        <div class="display-total-score-one">
         </div>
-        <div class="col-md-4">
-          Dice
-          <p id="result"></p>
-          <button type="button" name="button" class="switch">SWITCH</button>
-        </div>
-        <div class="col-md-4" id="p2">
-        <h2 id="player-two"></h2>
-        <div class="display-round-score-two">
-
-        </div>
-        <div class="display-total-score-two">
-
-        </div>
-          <button type="button" name="button" class="btn">ROLL DICE</button>
-        </div>
-
+        <button type="button" name="button" class="btn1">ROLL DICE</button>
+        <button type="button" name="button" class="switch1">SWITCH</button>
       </div>
 
+
+      <div class="col-md-4">
+          Dice
+        <p class="diceNow"></p>
+        Current Turn
+        <p class="currentTotal"></p>
+      </div>
+
+
+      <div class="col-md-4" id="p2">
+        <h2 id="player-two"></h2>
+        <div class="display-total-score-two"></div>
+        <button type="button" name="button" class="btn2">ROLL DICE</button>
+        <button type="button" name="button" class="switch2">SWITCH</button>
+      </div>
     </div>
-  </body>
+  </div>
+
+</body>
 </html>
 
 <!-- <div class="random">
-  <button type="submit" name="button" class="btn">Go!</button>
-  <p id='result'> </p>
+<button type="submit" name="button" class="btn">Go!</button>
+<p id='result'> </p>
 </div> -->
