--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
   <script src="js/scripts.js" type="text/javascript"></script>
 </head>
 <body>
+  <div class="game-start-overlay">
+    <div class="container">
+      <form class="player1">
+        <input type="text" name="player-input-one" value="" placeholder="Player 1 Name" id="player-name-1">
+        <button type="submit" name="button" class="btn btn-success" id="send-names">Let's Play!</button>
+        <input type="text" name="player-input-two" value="" placeholder="Player 2 Name" id="player-name-2">
+      </form>
+    </div>
+  </div>
   <div class="container">
     <div class="row">
-
       <div class="col-md-4" id="p1">
-        <h1 id="player-one"></h1>
+        <h2 id="player-one-name"></h2>
         <div class="display-total-score-one">
         </div>
         <button type="button" name="button" class="btn1">ROLL DICE</button>
         <button type="button" name="button" class="switch1">SWITCH</button>
       </div>
-
-
       <div class="col-md-4">
-          Dice
+        Dice
         <p class="diceNow"></p>
         Current Turn
         <p class="currentTotal"></p>
       </div>
-
-
       <div class="col-md-4" id="p2">
-        <h2 id="player-two"></h2>
+        <h2 id="player-two-name"></h2>
         <div class="display-total-score-two"></div>
         <button type="button" name="button" class="btn2">ROLL DICE</button>
         <button type="button" name="button" class="switch2">SWITCH</button>
