an if statement to switch between sides if a one is rolled

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <div class="row">
       <div class="col-md-4" id="p1">
         <h2 id="player-one-name"></h2>
-        <div class="display-total-score-one">
+        <div class="display-total-score-one"></div>
+        <div class="player-one-buttons">
+
+          <button type="button" name="button" class="btn1">ROLL DICE</button>
+          <button type="button" name="button" class="switch1">SWITCH</button>
         </div>
-        <button type="button" name="button" class="btn1">ROLL DICE</button>
-        <button type="button" name="button" class="switch1">SWITCH</button>
       </div>
       <div class="col-md-4">
         Dice
@@ -36,8 +38,11 @@
       <div class="col-md-4" id="p2">
         <h2 id="player-two-name"></h2>
         <div class="display-total-score-two"></div>
-        <button type="button" name="button" class="btn2">ROLL DICE</button>
-        <button type="button" name="button" class="switch2">SWITCH</button>
+        <div class="player-two-buttons">
+
+          <button type="button" name="button" class="btn2">ROLL DICE</button>
+          <button type="button" name="button" class="switch2">SWITCH</button>
+        </div>
       </div>
     </div>
   </div>
